# cppdict

./: .gitignore  CMakeLists.txt  README.md  meson.build
.github/workflows/: ccpp.yml
examples/: CMakeLists.txt  demo1.cpp  visitor.cpp
include/: CMakeLists.txt  dict.hpp
test/: CMakeLists.txt  basic_dict_ops.cpp  stl_compatibility.cpp  test.cpp
test/catch2/: catch.hpp
